package br.com.conry.domain.model.enums;

public enum CardType {

    DEFAULT,
    TOTAL_AMOUNT_SPENT,
    TOTAL_AVAILABLE
}
